--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <title>Final2x</title>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-<!--    <meta-->
-<!--      http-equiv="Content-Security-Policy"-->
-<!--      content="default-src 'self' file:  data:; img-src * 'self' data: https:; script-src 'self'; style-src 'self' 'unsafe-inline'"-->
-<!--    />-->
+    <!--    <meta-->
+    <!--      http-equiv="Content-Security-Policy"-->
+    <!--      content="default-src 'self' file:  data:; img-src * 'self' data: https:; script-src 'self'; style-src 'self' 'unsafe-inline'"-->
+    <!--    />-->
   </head>
 
   <body>
